GNOME Bugzilla – Bug 736512
Segfault in GtkPlacesSidebar when used with Nautilus
Last modified: 2014-09-12 07:13:57 UTC
The are a couple segfaults that can occur with Nautilus with the async changes to GtkPlacesSidebar. Patches coming...
Created attachment 285959 [details] [review] GtkPlacesSidebar: Only add shortcut if query succeeds
Created attachment 285960 [details] [review] GtkPlacesSidebar: Don't update bookmark if cancelled If the query fails because it has been cancelled, it means that dispose() has been called, so don't try and update anything. This fixes a segfault with Nautilus in certain situations.
Created attachment 285961 [details] [review] GtkPlacesSidebar: Fix a memory leak
Review of attachment 285959 [details] [review]: whoopsie.
Review of attachment 285960 [details] [review]: looks good.
Review of attachment 285961 [details] [review]: looks good.
Hi Ross, these look good to push, thanks.
Pushed to master as ca1e98a..08e1c8e. Thanks for the reviews.