GtkPlacesSidebar: Only add shortcut if query succeeds

https://bugzilla.gnome.org/show_bug.cgi?id=736512